Add an example client to highlight more new Java features.